syntax = "proto3";

package GrpcClasses;

service Matches {
  rpc findById(MatchIdRequest) returns (MatchModel);
  rpc updateMatch (MatchModel) returns (MatchModel);
  rpc deleteMatch (MatchIdRequest) returns (Empty);
  rpc findByUserId (UserIdRequest) returns (stream MatchModel);
  rpc isMatch (MatchModel) returns (MatchResult);
  rpc createMatchForUser (UserModel) returns (Empty);
  rpc createMatch (MatchModel) returns (MatchModel);
}

message MatchModel {
  int32 id = 1;
  int32 userId1 = 2;
  bool matchUser1 = 3;
  int32 userId2 = 4;
  bool matchUser2 = 5;
  bool match = 6;
}

message MatchIdRequest {
  int32 id = 1;
}

message UserIdRequest {
  int32 userId = 1;
}

message MatchResult {
  bool match = 1;
}

message UserModel {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string birthday = 4;
  string description = 5;
  int32 numberOfMatches = 6;
  string gender = 7;
  string preference = 8;
  string horoscope = 9;
  string occupation = 10;
  string city = 11;
  string education = 12;
  string drink = 13;
  bool administrator = 14;
}

message Empty {

}